--- a/main.html
+++ b/main.html
@@ -1,3 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Telegram Bot Script</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        pre {
+            background-color: #f4f4f4;
+            padding: 10px;
+            border: 1px solid #ddd;
+            overflow: auto;
+        }
+        code {
+            font-family: monospace;
+        }
+    </style>
+</head>
+<body>
+    <h1>Telegram Bot Script</h1>
+    <pre><code>
 import os
 import re
 import sys
@@ -1055,3 +1079,6 @@ async def text_handler(bot: Client, m: Message):
 bot.run()
 if __name__ == "__main__":
     asyncio.run(main())
+    </code></pre>       
+</body> 
+</html>
